--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,5 @@
     <string name="setting_update_hint">检测更新</string>
     <string name="setting_about_hint">关于</string>
     <string name="unknow">未知情况</string>
+    <string name="no_update_hint">当前已经是最新版</string>
 </resources>
