--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,4 +41,5 @@
     <string name="app_link">链接</string>
     <string name="app_remark">备注</string>
     <string name="app_copy">复制</string>
+    <string name="create_category">新建类别</string>
 </resources>
