--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,4 +42,5 @@
     <string name="app_remark">备注</string>
     <string name="app_copy">复制</string>
     <string name="create_category">新建类别</string>
+    <string name="input_current_user_pwd">请输入主密码</string>
 </resources>
