--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,4 +43,6 @@
     <string name="app_copy">复制</string>
     <string name="create_category">新建类别</string>
     <string name="input_current_user_pwd">请输入主密码</string>
+    <string name="advert">广告</string>
+    <string name="refresh_commend">刷新推荐</string>
 </resources>
